# tabline-plugin

./: README.md  pyproject.toml
tabline_plugin/: __init__.py
tabline_plugin/tabline_one_ui/: navigation.js  package.json
tabline_plugin/tabline_one_ui/views/: Home.jsx
