[tool.poetry]
name = "tabline-plugin"
version = "0.1.0"
description = ""
authors = ["Timizuo <timizuoebideri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nautobot = {path = "../../nautobot"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
